// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles color names 1`] = `
Array [
  "#FF4040",
  "#FF8080",
  "#FFBFBF",
  "#FFFFFF",
]
`;

exports[`handles hex color values 1`] = `
Array [
  "#FFBFBF",
  "#FFD5D5",
  "#FFEAEA",
  "#FFFFFF",
]
`;

exports[`handles hsl color values 1`] = `
Array [
  "#FF4040",
  "#FF8080",
  "#FFBFBF",
  "#FFFFFF",
]
`;

exports[`handles negative "lighten" values 1`] = `
Array [
  "#DF0700",
  "#BF1000",
  "#9F1900",
  "#802000",
]
`;

exports[`handles positive "lighten" values 1`] = `
Array [
  "#F13E2E",
  "#E77058",
  "#E1967E",
  "#DFB59F",
]
`;

exports[`handles rgb color values 1`] = `
Array [
  "#4040FF",
  "#8080FF",
  "#BFBFFF",
  "#FFFFFF",
]
`;

exports[`throws if "base" is an invalid color value 1`] = `"Unable to parse color from string: foo"`;

exports[`throws if "lighten" is greater than 1 1`] = `"The \\"lighten\\" argument must be a number between 1 and -1."`;

exports[`throws if "lighten" is less than -1 1`] = `"The \\"lighten\\" argument must be a number between 1 and -1."`;

exports[`throws if "saturate" is greater than 1 1`] = `"The \\"saturate\\" argument must be a number between 1 and -1."`;

exports[`throws if "saturate" is less than -1 1`] = `"The \\"saturate\\" argument must be a number between 1 and -1."`;

exports[`throws if "steps" is less than 0 1`] = `"The \\"steps\\" argmuent must be an positive integer."`;

exports[`throws if "steps" is not an integer 1`] = `"The \\"steps\\" argmuent must be an positive integer."`;
